force-app/main/default/objects/Educational_Detail__c/Educational_Detail__c.object-meta.xml
<CustomObject>
    <label>Educational Detail</label>
    <nameField>
        <displayFormat>EDN-{0}</displayFormat>
        <label>Educational Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educational Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>