force-app/main/default/objects/Educational_Detail__c/fields/CGPA__c.field-meta.xml
<CustomField>
    <fullName>CGPA__c</fullName>
    <label>CGPA</label>
    <type>TextArea</type>
</CustomField>