force-app/main/default/objects/Educational_Detail__c/fields/EducationType__c.field-meta.xml
<CustomField>
    <fullName>EducationType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSC (Xth)</fullName>
            </value>
            <value>
                <fullName>HSC (XIIth)</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Post-graduation</fullName>
            </value>
            <value>
                <fullName>Professional Certification</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>