force-app/main/default/objects/Educational_Detail__c/fields/Expected_Actual_Yr_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Expected_Actual_Yr_of_completion__c</fullName>
    <label>Expected/Actual Yr of completion</label>
    <type>TextArea</type>
</CustomField>