force-app/main/default/objects/Educational_Detail__c/fields/Qualification_Stream__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Stream__c</fullName>
    <label>Qualification/Stream</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EducationType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Agriculture/Fisheries/Dairy Technology</fullName>
            </value>
            <value>
                <fullName>Allied Medical Courses</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Arts/Applied Arts/Fine Arts</fullName>
            </value>
            <value>
                <fullName>Ayurvedic/Homeopathic/Unani</fullName>
            </value>
            <value>
                <fullName>Computers/IT</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Hotel/Hospitality/Travel/Tourism</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Mass Communication/Journalism</fullName>
            </value>
            <value>
                <fullName>Medical/Dental/Other Medical Courses</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Science/Home Science</fullName>
            </value>
            <value>
                <fullName>Chartered Accountancy (CA)</fullName>
            </value>
            <value>
                <fullName>Cost and Works Accountancy (ICWA)</fullName>
            </value>
            <value>
                <fullName>Company Secretaryship (CS)</fullName>
            </value>
            <value>
                <fullName>Engineering/Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>