force-app/main/default/objects/Educational_Detail__c/fields/School_College__c.field-meta.xml
<CustomField>
    <fullName>School_College__c</fullName>
    <label>School/College</label>
    <type>TextArea</type>
</CustomField>