force-app/main/default/objects/Educational_Detail__c/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <label>Specialisation</label>
    <type>TextArea</type>
</CustomField>