force-app/main/default/objects/Educational_Detail__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Educational Details</relationshipLabel>
    <relationshipName>Educational_Details</relationshipName>
    <type>Lookup</type>
</CustomField>